src/test/deca/context/valid/multiple_return_in_method.deca
/*
    Description : Plusieurs instructions return dans une méthode

    Résultat : OK
*/
class A{
    int r(){
        return 1;
        return 2;
    }
}
